--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
+    "mongodb": "^3.3.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon":"^1.19.2"
+    "nodemon": "^1.19.2"
   }
 }
